--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@
   }
 
 
+  nav {
+	position: fixed;
+	width: 500px;
+	height: 200px;
+	margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+	left: 0;
+	right: -1;
+  }
+
+
 #infobox {
 	position: absolute;
 	top: 0;
