--- a/style.css
+++ b/style.css
@@ -31,8 +31,9 @@
 	position: absolute;
 	top: 0;
 	right: 6px;
-	color: white;
-	opacity: 0.7;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	opacity: 1;
 }
 
 #current-year {
